tests/negative/resource_builtin_bad_arity_destroy.ora
resource TokenUnit = u256;

contract BadDestroyArity {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(from: address) {
        @destroy(balances[from]);
    }
}
